# unified_vision_processor_minimal

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  ARCHIVE_SUMMARY.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  DATA_STORAGE_ARCHITECTURE.md  DOMAIN_MIGRATION_PLAN.md  EVALUATION_README.md  EXTRACTION_METRICS_REFACTOR_STRATEGY.md  FUNCTIONALITY_RESTORATION.md  LLAMA_32_VISION_CUDA_ERRORS.md  LLAMA_PLACEHOLDER_ISSUE.md  LLAMA_VISION_SAFETY_ISSUES.md  PRODUCTION_FIELD_CHANGES.md  RAW_PRINT_STATEMENTS_FIX.md  README.md  README_SIMPLIFIED.md  README_model_comparison.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  RefactorSuggestions.yaml  SIMPLIFICATION_SUMMARY.md  SIMPLIFIED_IMPLEMENTATION_SUMMARY.md  UNIFIED_CONFIG_REFACTORING.md  VQA_Model_Comparison.md  Vision_Model_Comparison_Report.md  annotation_prompt.md  awk_markdown_processor.py  classification_fix.py  compare_classification_performance.py  convert_jpg_to_png.py  download_complete_llama_instruct.py  download_internvl3_model.ipynb  environment.yml  evaluate_extraction_performance.py  evaluate_models.py  evaluation_ground_truth.csv  (+52 more)
.claude/: settings.local.json
annotations/: image01.csv  image04.csv  image08.csv  image10.csv  image12.csv  image16.csv  image20.csv  image22.csv
backup/: BACKUP_INDEX.md  EVALUATION_SYSTEM_DESIGN.md  add_ground_truth.py  classification_comparison_results.json  debug_model_outputs.py  setup.py  update_image_references.py
common/: __init__.py  config.py  evaluation_utils.py  reporting.py
docs/: batch_results_creation.md  batch_to_csv_analysis.md  cli_usage_guide.md  field_schema_changes.md  generate_synthetic_ground_truth.md  ground_truth_evaluation_system.md  ground_truth_generation.md  model_evaluation_with_synthetic_data.md  production_schema.md  remote_testing_guide.md  report_regeneration_prompt.md  unified_cli_consolidation_plan.md
evaluation_results/: comparison_results.json  evaluation_report.md  internvl3_results.json  llama32_vision_results.json
models/: __init__.py  internvl3_processor.py  llama_processor.py
output/: internvl3_batch_extraction.csv  internvl3_comprehensive_evaluation_report_20250806_212443.md  internvl3_comprehensive_evaluation_report_20250806_232411.md  internvl3_deployment_checklist_20250806_212443.md  internvl3_deployment_checklist_20250806_232411.md  internvl3_evaluation_summary_20250806_212443.json  internvl3_evaluation_summary_20250806_232411.json  internvl3_extraction_metadata_20250806_232411.csv  internvl3_ground_truth_evaluation_20250806_212443.csv  internvl3_ground_truth_evaluation_20250806_232411.csv  llama_batch_extraction_20250806_231835.csv  llama_comprehensive_evaluation_report_20250806_231835.md  llama_deployment_checklist_20250806_231835.md  llama_evaluation_summary_20250806_231835.json  llama_ground_truth_evaluation_20250806_231835.csv
presentation_materials/: README.md  create_document_ai_timeline.py  document_ai_timeline.md  document_ai_timeline_final.md  document_ai_timeline_mermaid.md  document_ai_timeline_text.md  (+12 more)
(+118 files in other folders)
